Fix: 콘텐트 영역에 디자인 적용 부트스트랩에서 제공하는 클래스를 사용한다

--- a/firstproject/src/main/resources/templates/greetings.mustache
+++ b/firstproject/src/main/resources/templates/greetings.mustache
@@ -51,7 +51,9 @@
     </nav>
 
     <!--content-->
-    <h1>{{username}}님, 반갑습니다!</h1>
+    <div class="bg-dark text-white p-5">
+        <h1>{{username}}님, 반갑습니다!</h1>
+    </div>
 
 <!--    site info-->
     <div class="mb-5 container-fluid">
