Add: 상세 페이지 -> 목록 페이지

--- a/firstproject/src/main/resources/templates/articles/show.mustache
+++ b/firstproject/src/main/resources/templates/articles/show.mustache
@@ -10,7 +10,6 @@
     <tbody>
     {{#article}}
         <tr>
-            <!--        가짜 데이터 넣기-->
             <th>{{id}}</th>
             <td>{{title}}</td>
             <td>{{content}}</td>
@@ -18,4 +17,5 @@
     {{/article}}
     </tbody>
 </table>
+<a href="/articles">Go to Article List</a>
 {{>layouts/footer}}
