Add: 목록 페이지 -> 상세 페이지

--- a/firstproject/src/main/resources/templates/articles/index.mustache
+++ b/firstproject/src/main/resources/templates/articles/index.mustache
@@ -11,7 +11,7 @@
     {{#articleList}}
         <tr>
             <th>{{id}}</th>
-            <td>{{title}}</td>
+            <td><a href="/articles/{{id}}">{{title}}</a></td>
             <td>{{content}}</td>
         </tr>
     {{/articleList}}
