Fix: 제출 화면 css 수정

--- a/firstproject_2/src/main/resources/templates/articles/new.mustache
+++ b/firstproject_2/src/main/resources/templates/articles/new.mustache
@@ -6,10 +6,10 @@
             <input type="text" class="form-control" name="title">
         </div>
         <div class="mb-3">
-            <label class="form-control">내용</label>
+            <label class="form-label">내용</label>
             <textarea class="form-control" rows="3" name="content"></textarea>
         </div>
 
-        <button type="submit">Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 {{>layouts/footer}}
