Add: chap6 셀프체크

--- a/firstproject_2/src/main/resources/templates/members/index.mustache
+++ b/firstproject_2/src/main/resources/templates/members/index.mustache
@@ -12,11 +12,13 @@
     {{#memberList}}
         <tr>
             <th>{{id}}</th>
-            <td>{{email}}</td>
+            <td><a href="/members/{{id}}">{{email}}</td>
             <td>{{password}}</td>
         </tr>
     {{/memberList}}
     </tbody>
 </table>
+
+<a href="/signup">회원가입</a>
 
 {{>layouts/footer}}
