--- a/firstproject_2/src/main/resources/templates/articles/edit.mustache
+++ b/firstproject_2/src/main/resources/templates/articles/edit.mustache
@@ -8,7 +8,7 @@
             <input type="text" class="form-control" name="title" value="{{title}}">
         </div>
         <div class="mb-3">
-            <label class="form-label">내용</label>
+            <label class="form-label">비밀번호</label>
             <textarea class="form-control" rows="3" name="content">{{content}}</textarea>
         </div>
 
