--- a/firstproject_2/src/main/resources/templates/members/show.mustache
+++ b/firstproject_2/src/main/resources/templates/members/show.mustache
@@ -22,5 +22,5 @@
 <a href="/members/{{member.id}}/edit" class="btn btn-primary">수정하기</a>
 <a href="/members/{{member.id}}/delete" class="btn btn-danger">삭제하기</a>
 <a href="/members">Go to memberList</a>
-
+{{>comments/_comments}}
 {{>layouts/footer}}
