--- a/firstproject_2/src/main/resources/templates/comments/_new.mustache
+++ b/firstproject_2/src/main/resources/templates/comments/_new.mustache
@@ -18,7 +18,15 @@
             <!--            전송 버튼-->
             <button type="button" class="btn btn-primary" id="comment-create-btn">댓글 작성</button>
         </form>
-
-
     </div>
 </div>
+<script>
+    {
+        // 댓글 생성 버튼 변수화
+        const commentCreateBtn = document.querySelector("#comment-create-btn");
+        // 댓글 클릭 이벤트 감지
+        commentCreateBtn.addEventListener("click", function() {
+            console.log("버튼을 클릭했습니다");
+        });
+    }
+</script>
