Feat: 자바 스크립트로 REST API 호출하고 응답 처리하기
1. fetch(): 웹 페이지에서 HTTP 통신하는데 사용한다. 웹 페이지에서 GET, POST, PATCH, DELETE 같은 요청을 보내고 응답 받을 수 있다
2. fetch(url, {요청 메서드, 헤더 정보, 전송 데이터}).then(response => {응답 처리문;});

--- a/firstproject_2/src/main/resources/templates/comments/_new.mustache
+++ b/firstproject_2/src/main/resources/templates/comments/_new.mustache
@@ -37,6 +37,21 @@
             };
             // 댓글 객체 출력
             console.log(comment);
+            // fetch() - 비동기 통신을 위한 API
+            const url = "/api/articles/" + comment.articleId + "/comments";
+            fetch(url,{
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify(comment)
+            }).then(response => {
+            // HTTP 응답 코드에 따른 메시지 출력
+            const msg = (response.ok) ? "댓글이 등록됐습니다." : "댓글 등록 실패!";
+            alert(msg);
+            // 현재 페이지 새로 고침
+            window.location.reload();
+            });
         });
     }
 </script>
