--- a/firstproject_2/src/main/resources/templates/comments/_list.mustache
+++ b/firstproject_2/src/main/resources/templates/comments/_list.mustache
@@ -5,7 +5,12 @@
                 {{nickname}}
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal"
-                        data-bs-target="#comment-edit-modal">
+                        data-bs-target="#comment-edit-modal"
+                        data-bs-id="{{id}}"
+                        data-bs-nickname="{{nickname}}"
+                        data-bs-body="{{body}}"
+                        data-bs-article-id="{{articleId}}"
+                >
                     수정
                 </button>
             </div>
@@ -50,3 +55,26 @@
         </div>
     </div>
 </div>
+
+<!-- 모달 이벤트 처리 -->
+<script>
+    {
+    // 모달 요소 선택
+    const commentEditModal = document.querySelector("#comment-edit-modal");
+    // 모달 이벤트 감지
+    commentEditModal.addEventListener("show.bs.modal", function(event) {
+        // 1. 트리거 버튼 선택
+        const triggerBtn = event.relatedTarget;
+        // 2. 데이터 가져오기
+        const id = triggerBtn.getAttribute("data-bs-id");
+        const nickname= triggerBtn.getAttribute("data-bs-nickname");
+        const body = triggerBtn.getAttribute("data-bs-body");
+        const articleId = triggerBtn.getAttribute("data-bs-article-id");
+        // 3. 수정 폼에 데이터 반영
+        document.querySelector("#edit-comment-nickname").value=nickname;
+        document.querySelector("#edit-comment-body").value=body;
+        document.querySelector("#edit-comment-id").value=id;
+        document.querySelector("#edit-comment-article-id").value = articleId;
+    });
+    }
+</script>
