--- a/firstproject_2/src/main/resources/templates/comments/_list.mustache
+++ b/firstproject_2/src/main/resources/templates/comments/_list.mustache
@@ -13,6 +13,7 @@
                 >
                     수정
                 </button>
+                <button type="button" class="btn btn-sm btn-outline-danger comment-delete-btn">삭제</button>
             </div>
             <div class="card-body">
                 {{body}}
