--- a/firstproject_2/src/main/resources/templates/comments/_list.mustache
+++ b/firstproject_2/src/main/resources/templates/comments/_list.mustache
@@ -13,7 +13,10 @@
                 >
                     수정
                 </button>
-                <button type="button" class="btn btn-sm btn-outline-danger comment-delete-btn">삭제</button>
+                <!--                댓글 삭제 버튼 -->
+                <button type="button" class="btn btn-sm btn-outline-danger comment-delete-btn" data-comment-id="{{id}}">
+                    삭제
+                </button>
             </div>
             <div class="card-body">
                 {{body}}
@@ -105,6 +108,24 @@
                 alert(msg);
                 // 현재 페이지 새로 고침
                 window.location.reload();
+            });
+        });
+    }
+</script>
+
+<!-- 댓글 삭제 -->
+<script>
+    {
+        // 삭제 버튼 선택
+        const commentDeleteBtns = document.querySelectorAll(".comment-delete-btn");
+        // 삭제 버튼 이벤트  처리
+        commentDeleteBtns.forEach(btn => {
+            btn.addEventListener("click", (event) => {
+                // 이벤트 발생 요소 선택
+                const commentDeleteBtn = event.target;
+                // 삭제 댓글 id 가져오기
+                const commentId = commentDeleteBtn.getAttribute("data-comment-id");
+                console.log(`삭제 버튼 클릭: ${commentId}번 댓글`);
             });
         });
     }
