--- a/firstproject_2/src/main/resources/templates/comments/_list.mustache
+++ b/firstproject_2/src/main/resources/templates/comments/_list.mustache
@@ -126,6 +126,25 @@
                 // 삭제 댓글 id 가져오기
                 const commentId = commentDeleteBtn.getAttribute("data-comment-id");
                 console.log(`삭제 버튼 클릭: ${commentId}번 댓글`);
+                // 삭제 REST API 호출
+                const url = `/api/comments/${commentId}`;
+                fetch(url, {
+                    method: "DELETE"
+                }).then(response => {
+                    // 댓글 삭제 실패 처리
+                    if (!response.ok) {
+                        alert("댓글 삭제 실패");
+                        return ;
+                    }
+
+                    // 삭제 성공했을 시 댓글을 화면에서 지우고 메시지 창 듸우기
+                    const target = document.querySelector(`#comments-${commentId}`);
+                    target.remove();
+                    const msg = `${commentId}번 댓글을 삭제했습니다.`;
+                    alert(msg);
+                    // 현재 페이지 새로 고침
+                    window.location.reload();
+                });
             });
         });
     }
